--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
             </div>
             
             <div id="controls-hint">
-                WASD/方向键: 移动 | 鼠标点击: 移动 | E: 拾取 | C: 属性 | B: 背包 | V: 装备 | 1-4: 技能
+                WASD/方向键: 移动 | 鼠标点击: 移动 | E: 拾取 | C: 属性/装备 | B: 背包 | 1-3: 技能
             </div>
             
             <div id="skill-bar">
