--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                 WASD/方向键: 移动 | 鼠标点击: 移动 | E: 拾取 | C: 属性/装备 | B: 背包 | 1-3: 技能
             </div>
             
-            <div id="skill-bar">
+            <div id="skill-bar" style="display: none;">
                 <div class="skill-slot" data-skill-index="0">
                     <div class="skill-icon">⚔️</div>
                     <div class="skill-hotkey">1</div>
